--- a/modules/backend/assets/less/controls/scrollbar.less
+++ b/modules/backend/assets/less/controls/scrollbar.less
@@ -31,7 +31,7 @@
                 .border-radius(5px);
                 cursor: pointer;
                 overflow: hidden;
-                position: absolute;
+                position: sticky;
             }
         }
 
